# my_weektracer

./: 22.ppm  CMakeLists.txt
TheNextWeek/: main.cc
common/: texture.h
output/: cornell.ppm  eathmap_HQ.ppm  lab1.ppm  lab2.ppm  lab3.ppm  lab3_3.ppm  lab4.ppm  lab5.ppm  lab6.ppm  lab7.ppm  red_HQ.ppm  xiaohui.ppm  xiaohui_HQ.ppm
